--- a/css/login.css
+++ b/css/login.css
@@ -1,10 +1,3 @@
-
-h2 {
-    text-align: center;
-    margin-bottom: 20px;
-    font-size: 24px; 
-}
-
 form {
     width: 250px; 
     margin: auto;
@@ -12,6 +5,8 @@ form {
     border: 1px solid;
     border-radius: 10px;
     text-align: center;
+    margin-top: 200px;
+    
 }
 
 label {
