--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,22 @@ a {
     padding: 10px;
     border: 1px solid;
     border-radius: 5px;
+    font-size: 21px;
+}
+
+td {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 150px;
+}
+
+td.sinopse {
+    white-space: normal;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 300px;
+    height: 50px;
 }
 
 table {
