--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f8f9fa;
+    margin: 0;
+    padding: 20px;
+}
 
 nav {
     text-align: right;
@@ -12,27 +18,26 @@ a {
     font-size: 21px;
 }
 
-td {
-    white-space: nowrap;
+table {
+    margin-top: 20px;
+    width: 100%;
+    border-radius: 10px;
     overflow: hidden;
-    text-overflow: ellipsis;
-    max-width: 150px;
+}
+
+th, td {
+    padding: 15px;
+    text-align: left;
+    border-bottom: 1px solid #ddd; /* Borda inferior das células */
+}
+
+th {
+    background-color: darkgray; 
+    color: black;
 }
 
 td.sinopse {
     white-space: normal;
-    overflow: hidden;
-    text-overflow: ellipsis;
     max-width: 300px;
     height: 50px;
-}
-
-table {
-    margin-top: 150px;
-    width: 100%;
-    align-content: space-between;
-    border-collapse: collapse;
-    margin-bottom: 20px;
-    border: 1px solid;
-    border-radius: 10px;
 }
