fazendo barra de pesquisa

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,12 @@ body {
     padding: 20px;
 }
 
+.procurarFilmes {
+/* falta estilizar */
+
+}
+
+
 nav {
     text-align: right;
     color: aliceblue;
